--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,24 @@
 # Permalinks
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
-permalink:           pretty
-relative_permalinks: true
+#permalink:           pretty
+#relative_permalinks: true
 
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
-baseurl:             ''
+title:               Ranjith Nair - Programming World
+tagline:             'Web Developer'
+description:         '"Live as if you were to die tomorrow. Learn as if you were to live forever." - Gandhi <br/> Sharing learning through blogs.'
+url:                 http:/ranjithnair.github.io
+baseurl:             
 paginate:            5
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Ranjith Nair
+  url:               https://twitter.com/ranjith_m
+  email:             ranjith2112@gmail.com
 
 # Custom vars
 version:             1.0.0
+gems :
+  - jekyll-paginate
