--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,16 @@ tagline:             'Web Developer'
 description:         '"Live as if you were to die tomorrow. Learn as if you were to live forever." - Gandhi <br/> Sharing learning through blogs.'
 url:                 http:/ranjithnair.github.io
 baseurl:
-paginate:            5
+
+# Pagination Settings
+pagination:
+  enabled: true
+  per_page: 3
+  permalink: '/page/:num/'
+  title: ':title - page :num of :max'
+  limit: 0
+  sort_field: 'date'
+  sort_reverse: true
 
 # About/contact
 author:
@@ -25,5 +34,6 @@ kramdown:
                      input: GFM
                      syntax_highlighter: rouge
 future:              true
-gems :
-  - jekyll-paginate
+plugins :
+  - jekyll-paginate-v2
+  - jekyll-seo-tag
