--- a/_config.yml
+++ b/_config.yml
@@ -10,16 +10,7 @@ tagline:             'Web Developer'
 description:         '"Live as if you were to die tomorrow. Learn as if you were to live forever." - Gandhi <br/> Sharing learning through blogs.'
 url:                 http:/ranjithnair.github.io
 baseurl:
-
-# Pagination Settings
-pagination:
-  enabled: true
-  per_page: 3
-  permalink: '/page/:num/'
-  title: ':title - page :num of :max'
-  limit: 0
-  sort_field: 'date'
-  sort_reverse: true
+paginate:            5
 
 # About/contact
 author:
@@ -35,5 +26,4 @@ kramdown:
                      syntax_highlighter: rouge
 future:              true
 plugins :
-  - jekyll-paginate-v2
   - jekyll-seo-tag
